src/tests/fail/logger_too_short.stderr
error[E0597]: `handler` does not live long enough
 --> src/tests/fail/logger_too_short.rs:6:28
  |
6 |         let logger = Logger::new(&handler);
  |                                  ^^^^^^^^ borrowed value does not live long enough
7 |         Context::new(logger)
  |         -------------------- a temporary with access to the borrow is created here ...
8 |     };
  |     -- ... and the borrow might be used here, when that temporary is dropped and runs the `Drop` code for type `libstrophe::Context`
  |     |
  |     `handler` dropped here while still borrowed
  |
help: consider adding semicolon after the expression so its temporaries are dropped sooner, before the local variables declared by the block are dropped
  |
7 |         Context::new(logger);
  |                             +
